round 2 UR iterations

--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -28,7 +28,7 @@
             <fieldset class="govuk-fieldset" aria-describedby="robotics-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading">
-                  Which eligibility criteria does your automatic technology meet?
+                  Which eligibility criteria does your {{ data['robotic-equipment'] | lower }} meet?
                 </h1>
               </legend>
 
@@ -110,7 +110,7 @@
      <h2 class="app-step-nav-related__heading">
       <span class="app-step-nav-related__pretitle">Eligibility</span>
       </h2>
-      <p>Automatic items must meet at least 2 criteria to be eligible for grant funding.</p>
+      <p>Automatic items must fit at least 2 criteria to be eligible for grant funding.</p>
       
 
   </div>
