--- a/app/views/robotics/current/labour-saved.html
+++ b/app/views/robotics/current/labour-saved.html
@@ -30,22 +30,35 @@
 
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="labour-saved-1" name="labour-saved" type="radio" value="1 to 2">
+              <input class="govuk-radios__input" id="labour-saved-1" name="labour-saved" type="radio" value="0">
               <label class="govuk-label govuk-radios__label" for="labour-saved-1">
-                1 to 2 jobs
+                0 jobs
               </label>
             </div>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="labour-saved-2" name="labour-saved" type="radio" value="3 to 4">
+                <input class="govuk-radios__input" id="labour-saved-2" name="labour-saved" type="radio" value="1 to 2">
                 <label class="govuk-label govuk-radios__label" for="labour-saved-2">
-                  3 to 4 jobs
+                  1 to 2 jobs
                 </label>
               </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="3 to 4">
+              <label class="govuk-label govuk-radios__label" for="labour-saved-3">
+                3 to 4 jobs
+              </label>
+            </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="5 or more">
               <label class="govuk-label govuk-radios__label" for="labour-saved-3">
                 5 or more jobs
+              </label>
+            </div>
+            <div class="govuk-checkboxes__divider">or</div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="none">
+              <label class="govuk-label govuk-radios__label" for="labour-saved-3">
+                None of the above
               </label>
             </div>
               </div>
@@ -60,9 +73,9 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Funding priorities</span>
+          <span class="app-step-nav-related__pretitle">Manual labour shortage</span>
           </h2>
-          <p>RPA wants to fund projects that increase productivity.</p>
+          <p>Using robotic or automatic technologies can reduce the need to find manual labour.</p>
 
       </div>
       </div>
