--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -29,7 +29,7 @@
          </h1>
        </legend>       
                 
-        <p class="govuk-hint">Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>
+        <p class="govuk-hint">Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>
       
 
         <div class="govuk-form-group">
