--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -63,7 +63,7 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value=" Driverless tractor or platform">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Driverless tractor or platform">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
                   Driverless tractor or platform
                 </label>
@@ -84,7 +84,7 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Transplanting">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Transplanting technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
                   Transplanting
                 </label>
@@ -92,14 +92,14 @@
 
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Slurry">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Slurry and manure management technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
                   Slurry and manure management
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Other robotic technology">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Other technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
                   Other robotic or automatic technology
                 </label>
