--- a/app/views/robotics/current/solar-cost.html
+++ b/app/views/robotics/current/solar-cost.html
@@ -30,7 +30,7 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      <form id="mainForm" class="form" action="solar-energy" method="post">
+      <form id="mainForm" class="form" action="solar-cost-answer" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-heading-l">What is the total estimated cost of the solar PV system?</h1>
