--- a/app/views/robotics/current/solar-system-size.html
+++ b/app/views/robotics/current/solar-system-size.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="agricultural-sector" method="post">
+      <form id="mainForm" class="form" action="solar-cost" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -38,24 +38,35 @@
           <p class="govuk-hint">Select the size of your solar PV system</p>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="system-size" name="system-size" type="radio" value="100">
+              <input class="govuk-radios__input" id="system-size" name="system-size" type="radio" value="50">
               <label class="govuk-label govuk-radios__label" for="system-size">
-                Up to 100kW
+                Up to 50kW
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="system-size-2" name="system-size" type="radio" value="350">
+              <input class="govuk-radios__input" id="system-size-2" name="system-size" type="radio" value="51">
               <label class="govuk-label govuk-radios__label" for="system-size-2">
-                100kW to 350kW
+                51kW to 100kW
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="system-size-3" name="system-size" type="radio" value="350plus">
+              <input class="govuk-radios__input" id="system-size-3" name="system-size" type="radio" value="101">
               <label class="govuk-label govuk-radios__label" for="system-size-3">
-                More than 350kW
+                101kW to 150kW
               </label>
             </div>
-                      
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="system-size-3" name="system-size" type="radio" value="151">
+              <label class="govuk-label govuk-radios__label" for="system-size-3">
+                151kW to 200kW
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="system-size-3" name="system-size" type="radio" value="201">
+              <label class="govuk-label govuk-radios__label" for="system-size-3">
+                More than 201kW
+              </label>
+            </div>                      
           </div>
         </fieldset>
       </div>
