--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -32,7 +32,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What solar technologies does your project need?
+                What solar technology does your project need?
               </h1>
             </legend>
             <p class="govuk-hint">You can apply for grant funding to:</p>
@@ -77,7 +77,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-technology-4" name="solar-technology" type="checkbox" value="diverter">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-technology-4">
-                  Limit-loading power diverter to heat or cold store
+                  Limit-loading power diverter to heat stores
                 </label>
               </div>
             </div>
@@ -93,7 +93,12 @@
 
     <div class="govuk-grid-column-one-third">
 
-      
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+          <p>If you do not have an existing solar PV system, you must apply for funding for solar PV panels to be eligible for this grant. </p>         
+      </div>
 
     </div>
 
