--- a/app/views/robotics/current/solar-existing-system.html
+++ b/app/views/robotics/current/solar-existing-system.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solar-technology" method="post">
+      <form id="mainForm" class="form" action="solar-existing-answer" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -64,10 +64,10 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Funding priorities</span>
+          <span class="app-step-nav-related__pretitle">Existing solar PV system</span>
           </h2>
-          <p>Applicants who already have a solar PV system can still apply for this grant. For example, you can apply for a battery to support your existing solar PV panels.</p>      
-      </div>
+          <p>Applicants who already have a solar PV system can still apply for this grant. For example, you can apply for a battery to add to your existing solar PV panels.</p>
+        </div>
 
     </div>
 
