--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -151,7 +151,9 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Solar technology
           <br/><br/>
-          <p class="govuk-!-font-size-16">Solar panels</p>
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+              <li>Solar panels</li>
+            </ul>
           </th>
           <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
@@ -164,7 +166,10 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Solar PV system size
           <br/><br/>
-          <p class="govuk-!-font-size-16">100kW to 350kW</p>
+          <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+            <li>51kW to 1000kW</li>
+          </ul>
+          
           </th>
           <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
@@ -172,6 +177,24 @@
               Smaller solar PV systems
               </p>
           </td>
+          <td class="govuk-table__cell"><a href="#">Change</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Agricultural sector
+          <br/><br/>          
+          <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+            <li>Arable</li>
+          </ul>
+          </th>
+          <td class="govuk-table__cell">Average</td>
+          <td class="govuk-table__cell">
+
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+              <li>Significant labour shortages</li>
+              <li>Not received many grants in past</li>
+            </ul>
+            
           <td class="govuk-table__cell"><a href="#">Change</td>
         </tr>
 
