--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -146,6 +146,17 @@
           <td class="govuk-table__cell"><a href="introducing-innovation">Change</td>
         </tr>
 
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Labour saved
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['labour-saved'] | capitalize}}</li></ul></th>
+          <td class="govuk-table__cell">Average</td>
+          <td class="govuk-table__cell">
+          <p class="govuk-body govuk-!-font-size-16">
+                Replace manual labour</p>
+          </td>
+          <td class="govuk-table__cell"><a href="introducing-innovation">Change</td>
+        </tr>
+
         {% else %}
 
         <tr class="govuk-table__row">
