--- a/app/views/robotics/current/labour-saved.html
+++ b/app/views/robotics/current/labour-saved.html
@@ -30,26 +30,26 @@
 
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="labour-saved-1" name="labour-saved" type="radio" value="0">
+              <input class="govuk-radios__input" id="labour-saved-1" name="labour-saved" type="radio" value="0 jobs">
               <label class="govuk-label govuk-radios__label" for="labour-saved-1">
                 0 jobs
               </label>
             </div>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="labour-saved-2" name="labour-saved" type="radio" value="1 to 2">
+                <input class="govuk-radios__input" id="labour-saved-2" name="labour-saved" type="radio" value="1 to 2 jobs">
                 <label class="govuk-label govuk-radios__label" for="labour-saved-2">
                   1 to 2 jobs
                 </label>
               </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="3 to 4">
+              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="3 to 4 jobs">
               <label class="govuk-label govuk-radios__label" for="labour-saved-3">
                 3 to 4 jobs
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="5 or more">
+              <input class="govuk-radios__input" id="labour-saved-3" name="labour-saved" type="radio" value="5 or more jobs">
               <label class="govuk-label govuk-radios__label" for="labour-saved-3">
                 5 or more jobs
               </label>
