--- a/app/views/robotics/current/consent.html
+++ b/app/views/robotics/current/consent.html
@@ -29,7 +29,9 @@
         <p>I am aware the information I submit will be checked.</p>
         <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
 
-        <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future.
+        <h3 class="govuk-heading-s">Improving our schemes</h3>
+
+        <p class="govuk-body govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future.
         Please confirm if you are happy for us, or a third-party working for us, to contact you.</p>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
