changelog robotic changes

--- a/app/views/robotics/current/consent.html
+++ b/app/views/robotics/current/consent.html
@@ -25,8 +25,8 @@
       <fieldset class="govuk-fieldset" aria-describedby="consent-to-terms-hint">
         <h1 class="govuk-heading-l">Confirm and send</h1>
         <p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-        <p>I understand the score was based on the answers I provided.</p>
-        <p>I am aware the information I submit will be checked.</p>
+        <p>I understand the project’s eligibility and estimated grant amount is based on the answers I provided.</p>
+        <p>I am aware that the information I submit will be checked by the RPA.</p>
         <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
 
         <h3 class="govuk-heading-s">Improving our schemes</h3>
