--- a/app/views/robotics/current/contractor-details.html
+++ b/app/views/robotics/current/contractor-details.html
@@ -79,14 +79,14 @@
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
         <div class="govuk-form-group">
             <label class="govuk-label" for="contractor-address1">
-                Building and street
+              Address line 1
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="contractor-address1" name="contractor-address1" type="contractor-address1" spellcheck="false" aria-describedby="contractor-address1-hint" autocomplete="contractor-address1" value="{{ data['contractor-address1'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="contractor-address2">
-
+              Address line 2 (optional)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="contractor-address2" name="contractor-address2" type="contractor-address2" spellcheck="false" aria-describedby="contractor-address2-hint" autocomplete="contractor-address2" value="{{ data['contractor-address2'] }}">
         </div>
