--- a/app/views/robotics/current/farmer-details.html
+++ b/app/views/robotics/current/farmer-details.html
@@ -83,14 +83,14 @@
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-address1">
-                Building and street
+              Address line 1
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address1" name="farmer-address1" type="farmer-address1" spellcheck="false" aria-describedby="farmer-address1-hint" autocomplete="farmer-address1" value="{{ data['farmer-address1'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-address2">
-
+              Address line 2 (optional)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address2" name="farmer-address2" type="farmer-address2" spellcheck="false" aria-describedby="farmer-address2-hint" autocomplete="farmer-address2" value="{{ data['farmer-address2'] }}">
         </div>
