--- a/app/views/robotics/current/labour-saved-2.html
+++ b/app/views/robotics/current/labour-saved-2.html
@@ -24,12 +24,12 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              How much manual labour will this technology replace?
+              How much manual labour will this technology be equal to?
             </h1>
           </legend>
 
           <div class="govuk-radios">
-            
+           
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="labour-saved-2" name="labour-saved" type="radio" value="1 to 2 jobs">
@@ -68,9 +68,9 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Manual labour shortage</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>Using robotic or automatic technologies can reduce the need to find manual labour.</p>
+          <p>RPA wants to fund the use of robotic or automatic technology due to the current manual labour shortage.</p>
 
       </div>
       </div>
