--- a/app/views/robotics/current/other-robotic-conditional.html
+++ b/app/views/robotics/current/other-robotic-conditional.html
@@ -22,7 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          Your other technology might get a grant from this scheme
+          Your technology might get a grant from this scheme
         </h1>
 
         <p class="govuk-body">RPA will assess your item and whether they can fund it.  </p>
