--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -25,7 +25,7 @@
      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
          <h1 class="govuk-fieldset__heading">
-          What is your other {{ data['equipment-type'] | lower }} technology?
+          What is your {{ data['equipment-type'] | lower }} technology?
          </h1>
        </legend>       
                 
