--- a/app/views/robotics/current/project-items-summary.html
+++ b/app/views/robotics/current/project-items-summary.html
@@ -38,7 +38,7 @@
           
       
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Harvesting equipment
+                <th scope="row" class="govuk-table__header">Harvesting technology
                 <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">                 
                 </ul>
               </th>
@@ -56,7 +56,7 @@
 
 
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Weeding equipment
+                <th scope="row" class="govuk-table__header">Weeding technology
                   </th>
                   <td class="govuk-table__cell">Automatic</td>
                   <td class="govuk-table__cell">
