--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -42,23 +42,23 @@
             <div class="govuk-radios" data-module="govuk-radios">
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Harvesting equipment">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Harvesting technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Harvesting equipment
+                  Harvesting technology
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Weeding equipment">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Weeding technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Weeding equipment
+                  Weeding technology
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Spraying equipment">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Spraying technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
-                  Spraying equipment
+                  Spraying technology
                 </label>
               </div>
 
